deploying_to_aws/ecs/security.tf
resource "aws_security_group" "ecs_sg" {
  name        = "ecs-security-group"
  description = "Allow ECS tasks to communicate with RDS"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Modify based on your requirements
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ecs-security-group"
  }
}
